[SPv175] Fix SVG image opacity animations

Now mark changes to property trees as requiring subtree invalidation, in cases
where the document is not in composited mode.

Bug: 850611

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I256b752f520aa7c91520c01b3b05f8399c70d1a9
Reviewed-on: https://chromium-review.googlesource.com/1091595
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565904}
Former-commit-id: cab2a51906d80cec7c9b9a6084152dc0aeadbf9d